# openmk3

./: .gitignore  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md
crates/maschine-core/: Cargo.toml
crates/maschine-core/examples/: blink.rs  display_demo.rs  pad_monitor.rs  restore_agent.rs
crates/maschine-core/src/: device.rs  event.rs  lib.rs  transport.rs
crates/maschine-core/src/display/: dirty.rs  encoder.rs  framebuffer.rs  mod.rs
crates/maschine-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/maschine-core/src/transport/: dext_impl.rs  dext_wire.rs  mod.rs  nusb_impl.rs
crates/maschine-core/tests/: display_pipeline.rs
crates/maschine-proto/: Cargo.toml
crates/maschine-proto/src/: display.rs  hid_in.rs  hid_out.rs  lib.rs  types.rs
crates/maschine-proto/tests/: golden_frames.rs
crates/maschine-ui/: Cargo.toml
crates/maschine-ui/src/: browse.rs  font.rs  layout.rs  lib.rs  render.rs
crates/maschined/: Cargo.toml
crates/maschined/src/: ipc.rs  main.rs  osc.rs  session.rs  ws.rs
crates/nks-index/: Cargo.toml
crates/nks-index/src/: lib.rs  locations.rs  query.rs  scanner.rs  schema.sql  watch.rs
crates/nks-parse/: Cargo.toml
crates/nks-parse/src/: lib.rs  nica.rs  nisi.rs  plid.rs  riff.rs
crates/nks-parse/tests/: synthetic_nksf.rs
crates/plugin-registry/: Cargo.toml
crates/plugin-registry/src/: au.rs  lib.rs  resolve.rs  vst3.rs
dext/: README.md  build.sh
dext/MaschineDext.xcodeproj/: project.pbxproj
dext/MaschineDext.xcodeproj/xcshareddata/xcschemes/: MaschineHost.xcscheme  MaschineMk3Dext.xcscheme
dext/MaschineHost/: Info.plist  LaunchDaemon.plist  MaschineHost.entitlements  main.swift
dext/MaschineMk3Dext/: Info.plist  MaschineIPC.h  MaschineMk3Dext.entitlements  MaschineMk3DisplayTransport.cpp  MaschineMk3DisplayTransport.iig  MaschineMk3HidTransport.cpp  MaschineMk3HidTransport.iig  MaschineMk3UserClient.cpp  MaschineMk3UserClient.iig
dext/docs/: A1-architecture.md  INSTALL.md  R1-driverkit-usb.md  R2-packaging.md  R3-prior-art.md
dext/scripts/: build-dev.sh  build-dist.sh  install-daemon.sh  uninstall.sh
docs/: plan.md
msctl/: Cargo.toml
msctl/src/: main.rs
pluginhost/: CMakeLists.txt
pluginhost/src/: ipc.cpp  ipc.h  main.cpp  session.cpp  session.h
resources/macos/: launchd.plist
