[package]
name        = "msctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI client for maschined."

[[bin]]
name = "msctl"
path = "src/main.rs"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
