[package]
name        = "maschined"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon: owns the Maschine Mk3 device, serves OSC/WS/UDS clients."

[[bin]]
name = "maschined"
path = "src/main.rs"

[dependencies]
maschine-proto  = { workspace = true }
maschine-core   = { workspace = true }
nks-parse       = { workspace = true }
nks-index       = { workspace = true }
plugin-registry = { workspace = true }
maschine-ui     = { workspace = true }
tokio               = { workspace = true }
futures             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
rosc                = { workspace = true }
tokio-tungstenite   = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
rusqlite            = { workspace = true }
base64              = "0.22"
