[package]
name        = "nks-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem scanner and SQLite+FTS5 index for NKS preset libraries."

[dependencies]
nks-parse = { workspace = true }
rusqlite  = { workspace = true }
notify    = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
anyhow    = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "mkindex"
path = "src/bin/mkindex.rs"
